--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,14 @@
 		    <artifactId>junit</artifactId>
 		    <scope>test</scope>
 		</dependency>
+        
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-web-api</artifactId>
+            <version>7.0</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 		
 
@@ -94,7 +102,7 @@
 			<plugin>
 			  <groupId>org.apache.tomcat.maven</groupId>
 			  <artifactId>tomcat7-maven-plugin</artifactId>
-			  <version>2.1</version>
+			  <version>2.2</version>
 			  <configuration>
 			    <path>/</path>
 			  </configuration>
